# flake-parts-builder

./: .cz.toml  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cachix-push.yml  flake-check.yml  flakehub-publish.yml  flakehub.yml  update-flake-lock.yml
assets/: flake.nix.template
flake-parts-bootstrap/_bootstrap/: .gitignore  README.md  meta.nix
flake-parts/+dotfiles/: meta.nix
flake-parts/+github/: meta.nix
flake-parts/+home-manager/: meta.nix
flake-parts/+nixos/: meta.nix
flake-parts/+nixvim/: meta.nix
flake-parts/_base/: .envrc  .gitignore  meta.nix
flake-parts/agenix/: meta.nix
flake-parts/deploy-rs/: meta.nix
flake-parts/devenv/: meta.nix
flake-parts/flake-root/: meta.nix
flake-parts/gh-actions-cachix/: meta.nix
flake-parts/gh-actions-check/: meta.nix
flake-parts/gh-actions-flake-update/: meta.nix
flake-parts/gh-actions-flakehub/: meta.nix
flake-parts/gh-actions-pages/: meta.nix
flake-parts/gh-dependabot/: meta.nix
flake-parts/gh-templates-PR/: meta.nix
flake-parts/gh-templates-issues/: meta.nix
flake-parts/gitlab-ci-check/: .gitlab-ci.yml  meta.nix
flake-parts/hm-homes/: meta.nix
flake-parts/hm-modules/: meta.nix
flake-parts/lib/: meta.nix
flake-parts/nix-topology/: meta.nix
flake-parts/nixos-hosts/: meta.nix
flake-parts/nixos-modules/: meta.nix
flake-parts/nixvim-configurations/: meta.nix
flake-parts/nixvim-modules/: meta.nix
flake-parts/overlays/: meta.nix
parts/devenv/: .envrc
src/: config.rs  fs_utils.rs  main.rs  nix.rs  parts.rs  templates.rs
(+146 files in other folders)
