[package]
name = "flake-parts-builder"
version = "1.0.0"
edition = "2021"
authors = ["Tomáš Sandrini"]
repository = "https://github.com/tsandrini/flake-parts-builder"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["cargo", "derive"] }
diff = "0.1.13"
fs_extra = "1.3.0"
itertools = "0.13.0"
minijinja = "2.0.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
termcolor = "1.4.1"
thiserror = "1.0.61"
walkdir = "2.5.0"
