[package]
name = "flake-parts-builder"
version = "1.0.0-b1"
edition = "2021"
authors = ["Tomáš Sandrini"]
repository = "https://github.com/tsandrini/flake-parts-builder"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["cargo", "derive"] }
color-eyre = "0.6.3"
diff = "0.1.13"
env_logger = "0.11.5"
fs_extra = "1.3.0"
log = "0.4.22"
minijinja = "2.0.2"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempfile = "3.12.0"
termcolor = "1.4.1"
thiserror = "1.0.61"
walkdir = "2.5.0"
which = "6.0.2"

[dev-dependencies]
serial_test = "3.1.1"
